2010-10-22  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.19.0 released

2010-10-16  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (many functions): check status before doing something

2010-10-04  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_audio_playing): new function

2010-09-26  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_tell_len, avt_tell_mb_len):
	new functions

2010-09-25  Andreas K. Foerster  <info@akfoerster.de>

	* bdf2c (font): accept 0, return NULL for unknown chars
	avatar.c (avt_drawchar): accept NULL from get_font_char

	* akfavatar.h, avatar.c (avt_printable): new function

	* avatar.c (avt_put_character, avt_tell):
	don't ignore U+0000, U+00AD, U+2060 - U+2063

2010-09-24  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_get_mb_encoding): new function

2010-09-14  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_set_mouse_pointer):
	get mouse pointer from normal XBM-data
	mpointer.xbm, mpointer_mask.xbm: new files

2010-09-12  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_mb_encode, avt_mb_decode): optimized

2010-09-10  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c: handle WCHAR_MAX <= 255

2010-09-09  Andreas K. Foerster  <info@akfoerster.de>

	* mingw/iconv.h, mingw/win_iconv.c: new files
	imported from win_iconv (puplic domain)

	* 9x18.bdf: updated

2010-09-06  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h (avt_quit_audio): no longer deprecated

2010-09-05  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_set_auto_margin, avt_get_auto_margin):
	new functions
	(avt_auto_margin): marked deprecated
	filechooser.c, colorchooser.c: adapted

2010-08-30  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_put_character, avt_tell):
	support NEL, LS, PS

2010-08-29  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_mb_encoding, avt_set_title, avt_initialize, avt_quit):