@@ -48,9 +48,9 @@ BEGIN { width=height=started=default_char=charoffset=maxchar = 0 }
 function writetranstable(    i, blockstart)
 {
   if (width <= 8)
-    print "const unsigned char *\nget_font_char (wchar_t ch)"
+    print "const unsigned char *\nget_font_char (int ch)"
   else
-    print "const unsigned short *\nget_font_char2 (wchar_t ch)"
+    print "const unsigned short *\nget_font_char2 (int ch)"
 
   print "{"
   printf "  "
